# Monopol-ish

./: .gitignore  AUTHORS  Doxyfile  Makefile  Makefile.in  README.md  configure.ac
.github/workflows/: c-cpp.yml
docs/: CO2402 Assignment Checklist.docx  ClassDiagram.dia  README.md
src/: CBank.cpp  CBank.h  CBoard.cpp  CBoard.h  CBonus.cpp  CBonus.h  CChanceCard.cpp  CChanceCard.h  CChanceSquare.cpp  CChanceSquare.h  CDie.cpp  CDie.h  CFreeParking.cpp  CFreeParking.h  CFreeParkingSquare.cpp  CFreeParkingSquare.h  CGoSquare.cpp  CGoSquare.h  CGoToJail.cpp  CGoToJail.h  CGoToJailSquare.cpp  CGoToJailSquare.h  CJail.cpp  CJail.h  CJailSquare.cpp  CJailSquare.h  CMonopolish.cpp  CMonopolish.h  COwnershipCard.cpp  COwnershipCard.h  CPenalty.cpp  CPenalty.h  CPlayer.cpp  CPlayer.h  CProperty.cpp  CProperty.h  CRandom.cpp  CRandom.h  CSquare.cpp  CSquare.h  (+21 more)
test/: CBankTest.cpp  CPlayerTest.cpp  CRandomTest.cpp  CTextFilesTest.cpp  EPieceTest.cpp
